src/view/browser/render/snapshots/nifi_lens__view__browser__render__controller_service__snapshots__controller_service_detail_properties_resolvable_uuid_shows_arrow.snap
---
source: src/view/browser/render/controller_service.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ http-pool · controller service · ENABLED ────────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││type     org.apache.nifi.ssl.StandardRestrictedSSLContextService                                                    ││"
"││bundle   org.apache.nifi:nifi-ssl-context-service-nar:2.8.0                                                         ││"
"││parent   ingest                                                                                                     ││"
"││comments —                                                                                                          ││"
"││flags    restricted · deprecated · persists state                                                                   ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┏ Properties ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2 ┓│"
"│┃KEY                            VALUE                                                                                ┃│"
"│┃Keystore Filename              /opt/nifi/keystore.jks                                                               ┃│"
"│┃Delegate Service               dependent-ssl (11111111…) →                                                          ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"│┌ Referencing components ───────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││STATE        KIND NAME                                                                                          THR ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││TIME     SEV  MESSAGE                                                                                               ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
