src/view/browser/render/snapshots/nifi_lens__view__browser__render__controller_service__snapshots__controller_service_detail_with_referencing_components.snap
---
source: src/view/browser/render/controller_service.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ http-pool · controller service · ENABLED ────────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││type     org.apache.nifi.ssl.StandardRestrictedSSLContextService                                                    ││"
"││bundle   org.apache.nifi:nifi-ssl-context-service-nar:2.8.0                                                         ││"
"││parent   ingest                                                                                                     ││"
"││comments —                                                                                                          ││"
"││flags    restricted · deprecated · persists state                                                                   ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Properties ───────────────────────────────────────────────────────────────────────────────────────────────────── 5 ┐│"
"││KEY                            VALUE                                                                                ││"
"││Keystore Filename              /opt/nifi/keystore.jks                                                               ││"
"││Keystore Type                  JKS                                                                                  ││"
"││Truststore Filename            /opt/nifi/truststore.jks                                                             ││"
"││SSL Protocol                   TLSv1.2                                                                              ││"
"││Key Password                   ********                                                                             ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┏ Referencing components ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2 ┓│"
"│┃STATE        KIND NAME                                                                                          THR ┃│"
"│┃● RUNNING    PROC InvokeHTTP                                                                                    2   ┃│"
"│┃ENABLED      CS   dependent-ssl                                                                                 0   ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││TIME     SEV  MESSAGE                                                                                               ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
