src/view/browser/render/snapshots/nifi_lens__view__browser__render__controller_service__snapshots__cs_detail_renders.snap
---
source: src/view/browser/render/controller_service.rs
expression: "format!(\"{}\", terminal.backend())"
---
"http-pool  controller service  [ENABLED]                                                            "
"Type:   org.apache.nifi.ssl.StandardRestrictedSSLContextService                                     "
"Bundle: org.apache.nifi:nifi-ssl-context-service-nar:2.8.0                                          "
"Parent: ingest                                                                                      "
"                                                                                                    "
"Properties (showing 4 of 4)                                                                         "
"  Keystore Filename            /opt/nifi/keystore.jks                                               "
"  Keystore Type                JKS                                                                  "
"  Truststore Filename          /opt/nifi/truststore.jks                                             "
"  SSL Protocol                 TLSv1.2                                                              "
"Validation errors: none                                                                             "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
